project2/test/test_2_2.out
Error type 2 at Line 4: undefined function: bar
Error type 4 at Line 13: redefine function: bar